Fixed openCart button being visible on the top left corner of the body div before it should exist at all

--- a/Pirerre_JS/09-23-20_projet/css/style.css
+++ b/Pirerre_JS/09-23-20_projet/css/style.css
@@ -264,7 +264,7 @@
     color: gray;
     text-shadow: none;
     border: 1px solid gray;
-    padding: 5px;
+    padding: 6px;
     border-radius: 3%;
     min-width: 30px;
     background-color: transparent;
@@ -333,6 +333,7 @@ input[type="number"] {
 }
 
 .openCart {
+    opacity: 0%;
     bottom: -100px;
     overflow: hidden;
     transition: all 1s ease-out;
