--- a/Pirerre_JS/09-28-20/css/style.css
+++ b/Pirerre_JS/09-28-20/css/style.css
@@ -16,3 +16,7 @@ input[type="number"] {
 
 .champQuantite {
 }
+
+.card {
+    max-width: 300px;
+}
